<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuSearch"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menuBookmark"
        android:title="@string/bookmark"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menuBookmarkList"
        android:title="@string/bookmark_list"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menuImageGallery"
        android:title="@string/image_gallery"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menuChapters"
        android:title="@string/chapters"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menuSettings"
        android:title="@string/viewer_settings"
        app:showAsAction="never"/>

</menu>
